@@ -8,7 +8,11 @@ this repository contains the full copyright notices and license terms. -->
     <field name="currency"/>
     <label name="active"/>
     <field name="active"/>
+
     <field name="owners" colspan="6"/>
+    <label name="owners_sequence"/>
+    <field name="owners_sequence"/>
+
     <field name="numbers" colspan="6" pre_validate="1"
         view_ids="bank.bank_account_number_view_list_sequence"/>
 </form>
