@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<tree sequence="owners_sequence">
+    <field name="rec_name" string="Number" expand="2"/>
+    <field name="bank" expand="1" optional="0"/>
+    <field name="currency" optional="1"/>
+</tree>
